ontol/ontol-compiler/test-cases/error/sequence/mix1.on
def u (
    rel* is?: i64 // ERROR invalid mix of relationship type for subject
    rel* 0: text
)
